intro change a bit

--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -24,7 +24,7 @@ keywords:
 - R
 
 abstract: |
- Patterns or associations in large univariate time series data could be explored by analyzing the behavior across cyclic temporal granularities, which are temporal deconstructions accounting for repetitive behavior, for eg, hour-of-the-day, work-day/weekend, or holidays. This way of exploring time series analysis, however, presents itself with a plethora of displays that are potentially overwhelming for human consumption. This work provides a methodology to screen and rank the displays that are most informative in discerning distributional differences. This is done by introducing a distance measure for one or a pair of cyclic granularities that could be compared across different levels and data sets. All the methods are implemented in the open-source R package `hakear`. 
+ Patterns or associations in large univariate time series data could be explored by analyzing the behavior across cyclic temporal granularities, which are temporal deconstructions accounting for repetitive behavior, for eg, hour-of-the-day, work-day/weekend, or holidays. This way of exploring time series analysis, however, presents itself with a plethora of displays that are potentially overwhelming for human consumption. This work provides a methodology to screen and rank the displays that are most informative in discerning distributional differences. This is done by introducing a distance measure for one or a pair of cyclic granularities that could be compared across different cyclic granularities and data sets. All the methods are implemented in the open-source R package `hakear`. 
 
 bibliography: [bibliography.bib]
 preamble: >
@@ -91,18 +91,24 @@ set.seed(3215)
 <!-- <introducing the problem> -->
 <!-- background of the problem -->
 
-Exploratory data analysis, as coined by John W. Tukey [@Tukey1977-jx] involves many iterations of finding structures and patterns that allow the data to be informative. With temporal data available at finer scales, exploring time series data can become overwhelming with so many possible cyclic temporal granularities [@Bettini1998-ed, @Gupta2020-vo], which are temporal deconstructions that represent cyclic repetitions in time, e.g. hour-of-day, day-of-month, or any public holidays. These granularities form ordered (for eg. day-of-week where Tue is always followed by Wed, which again is followed by Thu and so on) or unordered categorical variables. Therefore, exploring univariate time series data amounts to exploring the distribution of the measured variable across different categories of the cyclic granularities. \noindent Take the example of the  electricity smart meter data used in @wang2020calendar for four households in Melbourne, Australia. Figure \ref{fig:onegran-new} shows the distribution of energy usage of one household (id 2) across cyclic granularity a) hour-of-day and b) month-of-year. Figure \ref{fig:onegran-new}(a) shows that energy consumption is higher during the morning hours (5-8) when members in the household wake up and then again in the evening hours (17-20) possibly when members get back from work with maximum variation (large inter-quartile range) in behavior in the afternoon hours (12-16). Figure \ref{fig:onegran-new}(b) shows the distribution of energy consumption across months January to June. The median and quartile deviation of energy usage in Jan and Feb are generally on a much higher side, possibly due to the usage of air conditioners (Jan, Feb are peak summer in Australia), however for other months (Mar-Jun, autumn and winter), the smaller median and quartile deviation indicate a more consistent behavior. It might also imply that this household do not use as much heater as compared to air conditioner. A lot of households in Victoria use gas heating and hence the usage of heaters might not be reflected here. Potentially many such displays could be drawn across day-of-week, day-of-month, weekday/weekend, or any other chosen cyclic granularities of interest. However, all of them would not be interesting to discern important patterns in the energy usage. Only those displays, which have "significant" distributional differences between categories of the cyclic granularity would be informative.
+Exploratory data analysis, as coined by John W. Tukey [@Tukey1977-jx] involves many iterations of finding structures and patterns that allow the data to be informative. With temporal data available at finer scales, exploring time series data can become overwhelming with so many possible cyclic temporal granularities [@Bettini1998-ed, @Gupta2020-vo], which are temporal deconstructions that represent cyclic repetitions in time, e.g. hour-of-day, day-of-month, or any public holidays. These granularities form ordered (for eg. day-of-week where Tue is always followed by Wed, which again is followed by Thu and so on) or unordered categorical variables. Therefore, exploring univariate time series data amounts to exploring the distribution of the measured variable across different categories of the cyclic granularities. \noindent Take the example of the electricity smart meter data used in @wang2020calendar for four households in Melbourne, Australia. Figure \ref{fig:onegran-new} shows the distribution of energy usage of one household (id 2) across cyclic granularity a) hour-of-day and b) month-of-year. Figure \ref{fig:onegran-new}(a) shows that energy consumption is higher during the morning hours (5-8) when members in the household wake up and then again in the evening hours (17-20) possibly when members get back from work with maximum variation (large interquartile range) in behavior in the afternoon hours (12-16). Figure \ref{fig:onegran-new}(b) shows the distribution of energy consumption across months January to June. The median and quartile deviation of energy usage in Jan and Feb are generally on a much higher side, possibly due to the usage of air conditioners (Jan, Feb are peak summer in Australia), however, for other months (Mar-Jun, autumn and winter), the smaller median and quartile deviation indicate a more consistent behavior. It might also imply that this household does not use as much heater as compared to air conditioner. A lot of households in Victoria use gas heating and hence the usage of heaters might not be reflected here. Potentially many such displays could be drawn across day-of-week, day-of-month, weekday/weekend, or any other chosen cyclic granularities of interest. However, all of them would not be interesting to discern important patterns in energy usage. Only those displays, which have "significant" distributional differences between categories of the cyclic granularity would be informative.
 
 ```{r calendar-elec, fig.height = 8, fig.cap = "Calendar displays faceted by two households are shown. The calendar displays are rich in information and has several components. For example, it can be observed easily that the level of energy consumption by household 2 is higher than household 4. Also, it gives an overview on when these households are away for holidays and which months consumptions are highest (Jan, Feb). However, when it comes to discerning periodic patterns, analyzing all possible periodic patterns through this display is overwhelming due to combination of linear and cyclic representation of time. For example, there is more going on in terms of peaks and troughs in id 2 compared to id 4, but it is not clear which all periodic patterns are dominant and if it differs between households."}
 
 ```
 
 
-```{r onegran-new, fig.cap="Boxplots showing the distribution of one household across one cyclic granularity at a time - (a) hour-of-day and (b) and month-of-year. The daily and annual periodic behavior of energy is apparent in (a) and (b) respectively, with daily peaks occuring in morning and evening hours when members in the house are present and active, more volatility (usage of air conditioner) in summer months (Jan, Feb) due to air conditioners and more consistent behavior in winter and autumn months (Mar, Apr, May, June)."}
+```{r onegran-new, fig.cap="Boxplots showing the distribution of one household across one cyclic granularity at a time - (a) hour-of-day and (b) and month-of-year. The daily and annual periodic behavior of energy is apparent in (a) and (b) respectively, with daily peaks occurring in morning and evening hours when members in the house are present and active, more volatility (usage of air conditioner) in summer months (Jan, Feb) due to air conditioners and more consistent behavior in winter and autumn months (Mar, Apr, May, June)."}
 ```
 
 <!-- comparing one and two grans for one households -->
-\noindent Exploring the distribution of the measured variable across two cyclic granularities tend to provide more detailed information on its structure. For example, Figure \ref{fig:id2-new2}(a) slice down further by showing the usage distribution across hour-of-day conditional on month-of-year across two households (id 2 and 4). It shows the hourly usage over a day do not remain same across months. Unlike other months, the 75th and 90th percentile for all hours of the day in January are high, pretty close and are not characterized by a morning and evening peak. The household in Figure \ref{fig:id2-new2}(b) has 90th percentile consumption higher in summer months relative to autumn or winter, but the 75th and 90th percentile are far apart in all months, implying that the second household resorts to air conditioning much less regularly than the first one. The differences seem to be more prominent across month-of-year (facets) than hour-of-day (x-axis) for this household, whereas they are prominent for both cyclic granularities for the first household. It could be immensely useful to make the transition from all potential displays to the ones that are informative across atleast one cyclic granularity.
+\noindent Exploring the distribution of the measured variable across two cyclic granularities tends to provide more detailed information on its structure. For example, Figure \ref{fig:id2-new2}(a) slice down further by showing the usage distribution across hour-of-day conditional on month-of-year across two households (id 2 and 4). It shows the hourly usage over a day does not remain the same across months. Unlike other months, the 75th and 90th percentile for all hours of the day in January are    high, pretty close, and are not characterized by a morning and evening peak. The household in Figure \ref{fig:id2-new2}(b) has 90th percentile consumption higher in summer months relative to autumn or winter, but the 75th and 90th percentile are far apart in all months, implying that the second household resorts to air conditioning much less regularly than the first one. The differences seem to be more prominent across month-of-year (facets) than hour-of-day (x-axis) for this household, whereas they are prominent for both cyclic granularities for the first household. 
+
+
+<!-- The problem and its dimension -->
+\noindent Are all of these four displays in Figures \ref{fig:onegran-new} and \ref{fig:id2-new2} useful in understanding the distributional difference in energy usage? Which ones are more useful than others? If $N_C$ is the total number of cyclic granularities of interest, the number of displays that could be potentially informative is $N_C$ when considering displays of the form in Figure \ref{fig:onegran-new}. The dimension of the problem, however, increases when considering more than one cyclic granularity. When considering displays of the form in Figure \ref{fig:id2-new2}, 
+there are $^{N_C}P_2$ possible pairwise plots exhaustively, with one of the two cyclic granularities acting as the conditioning variable. 
+This is huge and overwhelming for human consumption even for moderately large $N_C$. It could be immensely useful to make the transition from all potential displays to the ones that are informative across atleast one cyclic granularity.
 
 <!-- Moreover, the volatility in consumption are almost equal and high for all hours in Jan, whereas variability is most in the evening hours for other months. The distribution of consumption across different hours of the day look similar for Apr, May and Jun, characterized by a distinct morning, afternoon and evening peaks and higher variability in evening hours -->
 
@@ -110,8 +116,10 @@ Exploratory data analysis, as coined by John W. Tukey [@Tukey1977-jx] involves m
 
 <!-- months Jan and Feb not only have a high median consumption, but also more variability, possibly due to the usage of air conditioning. The other months shows more consistent behavior with the energy consumption rising in May and June. -->
 
-<!-- what is the dimension of the problem -->
-\noindent The dimension of this problem, however, increases when considering more than one cyclic granularity. Let $N_C$ be the total number of cyclic granularities of interest. That essentially implies ,  for two cyclic granularities, there are $^{N_C}P_2$ possible pairwise plots exhaustively, with one of the two cyclic granularities acting as the conditioning variable. This is large and overwhelming for human consumption.<!-- Scagnostics literature --> This problem is similar to Scagnostics (Scatterplot Diagnostics) by @tukey1988computer, which is used to identify meaningful patterns in large collections of scatterplots. Given a set of $v$ variables, there are $v(v-1)/2$ pairs of variables, and thus the same number of possible pairwise scatterplots. Therefore, even for small $v$, the number of scatterplots can be large, and scatterplot matrices (SPLOMs) could easily run out of pixels when presenting high-dimensional data. @Dang2014-tw and @wilkinson2005graph provides potential solutions to this, where few characterizations can be used to locate anomalies in density, shape, trend, and other features in the 2D point scatters. In this paper, we provide a solution to narrowing down the search from $^{N_C}P_2$ plots by introducing a new distance measure that can be used to detect significant distributional differences across cyclic granularities.
+
+<!-- Scagnostics literature, other literature and why we need more/different --> 
+
+\noindent This problem is similar to Scagnostics (Scatterplot Diagnostics) by @tukey1988computer, which is used to identify meaningful patterns in large collections of scatterplots. Given a set of $v$ variables, there are $v(v-1)/2$ pairs of variables, and thus the same number of possible pairwise scatterplots. Therefore, even for small $v$, the number of scatterplots can be large, and scatterplot matrices (SPLOMs) could easily run out of pixels when presenting high-dimensional data. @Dang2014-tw and @wilkinson2005graph provide potential solutions to this, where few characterizations can be used to locate anomalies in density, shape, trend, and other features in the 2D point scatters. In this paper, we provide a solution to narrowing down the search from $^{N_C}P_2$ plots by introducing a new distance measure that can be used to detect significant distributional differences across cyclic granularities.<!-- harmonies and why it is not enough --> This work is a natural extension of our previous work [@Gupta2020-vo] that narrows down the search from $^{N_C}P_2$ plots by identifying pairs of granularities that can be meaningfully examined together (a "harmony"), or when they cannot (a "clash"). However, even after excluding clashes, the list of harmonies left could be enormous for exhaustive exploration. Hence, there is a need to reduce the search even further by including only those harmonies which are informative enough. @inference and @Majumder2013-hb present methods for statistical significance testing of visual findings using human cognition as the statistical tests. In this paper, the visual discovery of distributional differences is facilitated by choosing a threshold for the proposed numerical distance measure, eventually selecting only those cyclic granularities for which the distributional differences are sufficient to make it an interesting display.
 
 
 <!-- \ref{fig:id2-new2} shows the distribution of energy consumption across hour-of-day conditional on month-of-year. \ref{fig:id2-new2}(a) shows that energy consumption is higher during the morning hours when members in the household wake up and then again higher in the evening hours possibly when members are back from work with them showing maximum variable behavior in the afternoon hours. \ref{fig:id2-new2}(b) shows the months Jan and Feb not only have a high median consumption, but also more variability, possibly due to the usage of air conditioning. The other months shows more consistent behavior with the energy consumption rising in May and June. \ref{fig:id2-new2} adds to this information, by showing that hours in Jan do not necessarily follow the same pattern across the day (due to Holidays, people visiting). Moreover, the volatility in consumption are almost equal and high for all hours in Jan, whereas variability is most in the evening hours for other months. The distribution of consumption across different hours of the day look similar for Apr, May and Jun, characterized by a distinct morning, afternoon and evening peaks and higher variability in evening hours. -->
@@ -157,8 +165,6 @@ Exploratory data analysis, as coined by John W. Tukey [@Tukey1977-jx] involves m
 
 
 
-<!-- harmonies and why it is not enough -->
-\noindent This work is a natural extension of our previous work [@Gupta2020-vo] that narrows down the search from $^{N_C}P_2$ plots by identifying pairs of granularities that can be meaningfully examined together (a "harmony"), or when they cannot (a "clash"). However, even after excluding clashes, the list of harmonies left could be enormous for exhaustive exploration. Hence, there is a need to reduce the search even further by including only those harmonies which are informative enough. @inference and @Majumder2013-hb present methods for statistical significance testing of visual findings using human cognition as the statistical tests. In this paper, the visual discovery of distributional differences is facilitated by choosing a threshold for the proposed numerical distance measure, eventually selecting only those cyclic granularities for which the distributional differences are sufficient to make it an interesting display.
 
 
 Our contributions in this paper are:
@@ -176,7 +182,9 @@ of patterns in the time series data;
  
  * show that the proposed distance metric could be used to rank the interesting patterns across different datasets and temporal granularities since they have been normalized for relevant parameters.
 
-The article is organized as follows. Section \ref{sec:computation-wpd} introduces a new distance measure, discusses the reasoning and details the computation.  Section \ref{sec:rank-wpd} discusses how to choose a threshold to select only significant harmonies. Section \ref{sec:simulations} provides some simulation study on the proposed methodology. Section \ref{sec:application-wpd} presents an application to a residential smart meter data in Melbourne to show how this distance measure acts as a way to automatically detect periodic patterns in time series.
+\noindent The article is organized as follows. Section \ref{sec:computation-wpd} introduces a new distance measure, discusses the reasoning and details the computation.  Section \ref{sec:rank-wpd} discusses how to choose a threshold to select only useful displays. Section \ref{sec:simulations} provides some simulation study on the proposed methodology. Section \ref{sec:application-wpd} presents an application to residential smart meter data in Melbourne to show how the proposed methodology can be used to automatically detect temporal granularities along which distributional differences are significant.
+
+<!-- acts as a way to automatically detect periodic patterns in time series. -->
 
 
 <!-- Also, ranking the remaining harmony pairs based on how well they capture the variation in the measured variable could be potentially useful.   -->
